Fix scrollbar height

--- a/rolleshark.scss
+++ b/rolleshark.scss
@@ -25,7 +25,6 @@ body, html {
         top: 6px;
         float: right;
         width: 3px;
-        height: 166px;
         border: 0;
         border-radius: 3px;
         background-color: transparent;
@@ -41,7 +40,6 @@ body, html {
         top: 3px;
         float: right;
         width: 3px;
-        height: 166px;
         border: 0;
         border-radius: 3px;
         background-color: rgb(204, 204, 204);
@@ -52,20 +50,20 @@ body, html {
         background: rgba(#cccccc, .2);
     }
 
-    &.rightframe {
-        overflow: hidden;
-    }
-
-    .detailSelected {
-        line-height: auto !important;
-    }
-
     ::-webkit-scrollbar, 
     ::-webkit-scrollbar-track, 
     ::-webkit-scrollbar-thumb, 
     ::-webkit-scrollbar-thumb:window-inactive {
         background: transparent;
         transition: all 0.55s;
+    }
+
+    &.rightframe {
+        overflow: hidden;
+    }
+
+    .detailSelected {
+        line-height: auto !important;
     }
 
     iframe, frame, frameset {
